# dashcorn

./: README.md  demo.py  pyproject.toml
dashcorn/: cli.py
dashcorn/agent/: conf_logging.py  middleware.py  proc_inspector.py  system_reporter.py  worker_inspector.py  worker_reporter.py  zmq_client.py
dashcorn/dashboard/: db.py  main.py  realtime.py  zmq_server.py
dashcorn/utils/: process.py
demo/: demo.py
src/dashcorn/: __main__.py  cli.py  cli_config.py  cli_hook.py
src/dashcorn/agent/: bootstrap.py  config.py  master_reporter.py  middleware.py  proc_inspector.py  settings_listener.py  settings_store.py  worker_reporter.py  worker_sender.py  zmq_client.py
src/dashcorn/cli/: __init__.py  sub_agent.py  sub_app.py  sub_hook.py  sub_hub.py
src/dashcorn/command/: code_hook_injector.py  default_inject_config.py  hook_template_config.py  process_launcher.py
src/dashcorn/commons/: agent_info_util.py  consts.py
src/dashcorn/config/: config_loader.py  config_schema_app.py  config_schema_hub.py
src/dashcorn/dashboard/: config.py  lifecycle_service.py  main.py  metrics_collector.py  process_executor.py  process_manager.py  prom_exporter.py  prom_http_server.py  prom_metrics_exporter.py  prom_metrics_scheduler.py  prom_metrics_server.py  realtime.py  realtime_metrics.py  schema.sql  settings_publisher.py  settings_selector.py  zmq_server.py
src/dashcorn/hub/: __main__.py  cli.py  hooks.py  pidfile.py  runner.py  webapp.py
src/dashcorn/utils/: zmq_util.py
tests/dashcorn/agent/: test_middleware.py  test_middleware_utils.py  test_proc_inspector.py
(+15 files in other folders)
